Adiciona os CRUDs Componente e Pedido